yaml-templates/punq-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: punq-service
    namespace: punq
spec:
    type: ClusterIP
    ports:
    - port: 1337 
    selector:
        app: punq
