yaml-templates/ingress-example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: myapp.mydomain.com
    http:
      paths:
      - pathType: Prefix
        path: "/testpath"
        backend:
          service:
            name: test
            port:
              number: 80
