yaml-templates/punq-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: punq-ingress
  namespace: punq
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: punq.mogenius.dev
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: test
            port:
              number: 8080
